--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
-            "aos": "^2.3.4",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "framer-motion": "^12.23.25",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
@@ -48,7 +48,6 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
-            "@types/aos": "^3.0.7",
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.0",
             "@types/react-dom": "^19.2.0",
